<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gainsboro"
    tools:context="com.camilagiraldo.my_geometry.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/Cubo"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Cubo"
                    android:onClick="inic"
                    />

                <RadioButton
                    android:id="@+id/Cuadro"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Cuadro"
                    android:onClick="inic"/>

                <RadioButton
                    android:id="@+id/Circulo"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Circulo"
                    android:onClick="inic" />

                <RadioButton
                    android:id="@+id/Triangulo"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/Triangulo"
                    android:onClick="inic"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/Imagen1"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:src="@drawable/cube"

                />
            <ImageView
                android:id="@+id/Imagen2"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:src="@drawable/square"
                />
            <ImageView
                android:id="@+id/Imagen3"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:src="@drawable/circle"
                />
            <ImageView
                android:id="@+id/Imagen4"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:src="@drawable/triangle"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Lado1Tex"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Lado"
                android:textSize="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/Lado2Tex"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Lado2"
                android:textSize="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/Lado3Tex"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Base"
                android:textSize="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:visibility="invisible"
                />
            <TextView
                android:id="@+id/RadioInTex"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Radio"
                android:textSize="20dp"
                android:textAlignment="center"
                android:gravity="center"
                android:visibility="invisible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/Lado1"
            android:visibility="invisible"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/Lado2"
            android:visibility="invisible"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/Lado3"
            android:visibility="invisible"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:id="@+id/RadioIn"
            android:visibility="invisible"
            />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/calcular1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Calcular"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/crimson"
                android:background="@color/lightsteelblue"
                android:onClick="Calcular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="fill_parent"
                   android:text="@string/Perimetro"
                   android:textSize="20dp"
                   android:textAlignment="center"
                   android:gravity="center"
                   />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:text="@string/Area"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:text="@string/Volumen"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >
                <TextView
                    android:id="@+id/Perimetro_R"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    />
                <TextView
                    android:id="@+id/Area_R"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    />
                <TextView
                    android:id="@+id/Volumen_R"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"

                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
